Rewrite Error using the thiserror crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = { version = "1.0.83", features = ["backtrace"] }
 clap = { version = "4.5.4", features = ["derive"] }
 toml = "0.8.12"
 serde = { version = "1.0.201", features = ["derive"] }
+thiserror = "1.0.61"
 
 [[bin]]
 name = "local-fqdn-filter"
