--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ clap = { version = "4.5.4", features = ["derive"] }
 toml = "0.8.12"
 serde = { version = "1.0.201", features = ["derive"] }
 thiserror = "1.0.61"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+tracing-appender = "0.2.3"
 
 [[bin]]
 name = "local-fqdn-filter"
