--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ thiserror = "1.0.61"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
+ipctl = { git = "https://github.com/niumlaque/ipctl", branch = "master", features = ["tokio"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 
 [[bin]]
 name = "local-fqdn-filter"
