--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
 ipctl = { git = "https://github.com/niumlaque/ipctl", branch = "master", features = ["tokio"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+wildmatch = "2.3.4"
 
 [[bin]]
 name = "lff"
