--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tracing-appender = "0.2.3"
 ipctl = { git = "https://github.com/niumlaque/ipctl", branch = "master", features = ["tokio"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 wildmatch = "2.3.4"
+chrono = "0.4.38"
 
 [[bin]]
 name = "lff"
